* Fix panel looking ugly in Firefox * Fix reenable after global disable not working properly on Firefox

--- a/panel/panel.css
+++ b/panel/panel.css
@@ -5,6 +5,7 @@ body {
     width: 400px;
     overflow-x: hidden;
     user-select: none;
+    font-size: 13px;
 }
 .toggleButton {
     width: 24px;
